--- a/app/frontend/organisms/Header/Header.css
+++ b/app/frontend/organisms/Header/Header.css
@@ -55,7 +55,7 @@
     align-items: center;
     justify-self: end;
 
-    .button {
+    > .button {
       position: relative;
       color: var(--neutralA11);
       pointer-events: all;
