--- a/app/frontend/styles/sizes.css
+++ b/app/frontend/styles/sizes.css
@@ -9,6 +9,7 @@
   --icon-size: 1.5rem;
   --border-radius-standard: 0.25rem;
   --border-radius-large: 0.5rem;
+  --border-radius-round: 100vmax;
   --button-size-small: 2rem;
   --button-size-medium: 2.5rem;
   --button-size-large: 3.5rem;
