allow activity image upload

--- a/app/frontend/pages/Admin/Festival/Activities/Activities.css
+++ b/app/frontend/pages/Admin/Festival/Activities/Activities.css
@@ -1,35 +1,1 @@
-.url-editor {
-  display: flex;
-  align-items: center;
-
-  &__prefix {
-    color: var(--text-subtle);
-
-    @media (width <= 640px) {
-      display: none;
-    }
-  }
-
-  &__copy {
-    margin-block: calc(var(--button-padding-block) * -1);
-    opacity: 0;
-
-    .url-editor:hover & {
-      opacity: 1;
-    }
-
-    .in-place-edit__wrapper[data-editing] ~ & {
-      opacity: 0;
-    }
-  }
-
-  .in-place-edit__toggle {
-    margin-inline-end: 0;
-  }
-
-  &:hover {
-    .in-place-edit__toggle {
-      opacity: 1;
-    }
-  }
-}
+/* empty */
