--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
 
       Visit the guide for more information: https://vite-ruby.netlify.app/guide/rails
     -->
+
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   </head>
   <body>
     <svg style="display: none">
