--- a/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
+++ b/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
@@ -1,14 +1,46 @@
+.url-editor {
+  display: flex;
+  align-items: center;
+
+  &__prefix {
+    color: var(--text-subtle);
+    line-height: var(--line-height-medium);
+
+    @media (width <= 640px) {
+      display: none;
+    }
+  }
+
+  &__copy {
+    margin-block: calc(var(--button-padding-block) * -1);
+    opacity: 0;
+
+    .url-editor:hover & {
+      opacity: 1;
+    }
+
+    .in-place-edit__wrapper[data-editing] ~ & {
+      opacity: 0;
+    }
+  }
+
+  .in-place-edit__toggle {
+    margin-inline-end: 0;
+  }
+
+  &:hover {
+    .in-place-edit__toggle {
+      opacity: 1;
+    }
+  }
+}
+
 .activity-details-form {
   display: grid;
   grid-template-columns: 1fr;
   gap: var(--small);
   align-items: flex-start;
   padding-block: var(--large);
-
-  @media (width >= 769px) {
-    grid-template-columns: 1fr 3fr;
-    row-gap: var(--large);
-  }
 
   label {
     margin-block: var(--small);
@@ -19,5 +51,51 @@
     max-height: calc(75vh - 4rem);
     max-height: calc(75dvh - 4rem);
     max-height: calc(75svh - 4rem);
+  }
+
+  @media (width >= 769px) {
+    grid-template-columns: 1fr 3fr;
+    row-gap: var(--large);
+  }
+}
+
+.activity-picture {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  place-items: center;
+  overflow: hidden;
+  border: var(--border-width-standard) solid var(--border-element);
+  border-radius: var(--border-radius-standard);
+  background-color: var(--background-element);
+  cursor: pointer;
+  aspect-ratio: 16 / 9;
+
+  > * {
+    grid-row: 1;
+    grid-column: 1;
+  }
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: opacity var(--timing-standard) var(--ease-standard);
+  }
+
+  input {
+    align-self: stretch;
+    justify-self: stretch;
+    border-radius: 50%;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  &:hover {
+    background-color: var(--background-hover);
+
+    img {
+      opacity: 0.25;
+    }
   }
 }
