attach/detach activities

--- a/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
+++ b/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
@@ -99,3 +99,13 @@
     }
   }
 }
+
+.attached-activity {
+  display: grid;
+  gap: var(--small);
+  place-content: center;
+  align-items: center;
+  justify-items: center;
+  min-height: 50vh;
+  padding: var(--medium) var(--horizontal-padding);
+}
