--- a/app/frontend/pages/Admin/Festival/Timetable/Timetable.css
+++ b/app/frontend/pages/Admin/Festival/Timetable/Timetable.css
@@ -241,3 +241,16 @@
     gap: var(--small);
   }
 }
+
+.activity-popover {
+  .popover__header {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .popover__footer {
+    .button {
+      flex-grow: 0;
+    }
+  }
+}
