--- a/app/frontend/pages/Admin/Admin.css
+++ b/app/frontend/pages/Admin/Admin.css
@@ -116,3 +116,14 @@
     margin-block: var(--large);
   }
 }
+
+footer.details-form__buttons {
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  gap: var(--small);
+  justify-content: end;
+  padding: var(--small) var(--horizontal-padding);
+  border-top: var(--border-width-standard) solid var(--border-subtle);
+  background: var(--background);
+}
