--- a/app/frontend/helpers/Tooltip/Tooltip.css
+++ b/app/frontend/helpers/Tooltip/Tooltip.css
@@ -47,6 +47,12 @@
 
     transform-origin: calc(var(--spacing-small) * -1) 50%;
   }
+
+  :where(ul) {
+    margin: 0;
+    padding: 0 0 0 var(--medium);
+    text-align: left;
+  }
 }
 
 :where(.tooltip__arrow) {
