--- a/app/frontend/molecules/InPlaceEdit/InPlaceEdit.css
+++ b/app/frontend/molecules/InPlaceEdit/InPlaceEdit.css
@@ -9,6 +9,7 @@
     display: flex;
     gap: var(--spacing);
     align-items: center;
+    max-width: 100%;
     font-size: var(--font-size-medium);
     line-height: var(--line-height-medium);
 
@@ -23,11 +24,15 @@
     margin: calc(var(--button-padding-block) * -1);
     opacity: 0;
     transition: opacity var(--transition-duration) ease-in-out;
-    margin-inline-end: -100%;
 
     &:focus {
       opacity: 1;
     }
+  }
+
+  &__value {
+    flex: 0 1 auto;
+    min-width: 1px;
   }
 
   &[data-saving] {
