--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -14,14 +14,18 @@
         border: none;
         -ms-interpolation-mode: bicubic;
         max-width: 100%;
+        width: 120px;
+        display: block;
+        height: auto;
+        margin-bottom: 32px;
       }
 
       body {
         background-color: #f6f6f6;
         font-family: sans-serif;
         -webkit-font-smoothing: antialiased;
-        font-size: 14px;
-        line-height: 1.4;
+        font-size: 16px;
+        line-height: 1.5;
         margin: 0;
         padding: 0;
         -ms-text-size-adjust: 100%;
@@ -99,6 +103,12 @@
           color: #999999;
           font-size: 12px;
           text-align: center;
+      }
+
+      .logo {
+        display: block;
+        width: 120px;
+        height: auto;
       }
 
       /* -------------------------------------
@@ -332,7 +342,7 @@
     </style>
   </head>
   <body>
-    <span class="preheader">This is preheader text. Some clients will show this text as a preview.</span>
+    <span class="preheader">Your NZIF 2023 registration</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -348,6 +358,7 @@
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
+                        <%= link_to email_image_tag('logo-light.png'), root_url %>
                         <%= yield %>
                       </td>
                     </tr>
