allocation playground for jim

--- a/app/frontend/atoms/ProgressBar/ProgressBar.css
+++ b/app/frontend/atoms/ProgressBar/ProgressBar.css
@@ -12,6 +12,7 @@
   }
 
   &::-webkit-progress-value {
+    min-width: var(--progress-bar-height);
     border-radius: var(--border-radius-round);
     background: var(--progress-bar-foreground);
   }
