--- a/app/frontend/atoms/ProgressBar/ProgressBar.css
+++ b/app/frontend/atoms/ProgressBar/ProgressBar.css
@@ -15,5 +15,6 @@
     min-width: var(--progress-bar-height);
     border-radius: var(--border-radius-round);
     background: var(--progress-bar-foreground);
+    transition: width var(--timing-standard) var(--ease-standard);
   }
 }
