update email wording

--- a/app/views/participant_mailer/workshop_confirmation.html.erb
+++ b/app/views/participant_mailer/workshop_confirmation.html.erb
@@ -45,18 +45,21 @@
   </table>
   <p>
     All prices are in New Zealand Dollars and include GST.
-    This amount is due now, and can be paid at any time by visiting
+    You can pay this amount now by visiting
     <%= link_to "your registration page", payment_url(@registration) %>.
   </p>
   <p>
-    <b>Important:</b> If payment is not received prior to the start of the Festival, and we haven’t
-    heard from you, we’ll cancel your registration and offer your workshop places
-    to someone else, so please let us know if that’s going to be an issue.
+    <b>Important:</b> If payment is not received by 1 October, we reserve the right to
+    cancel your registration and offer your workshop places to someone else.
+    We really don’t want to do this, so if you need extra time to make your payment, please email us at
+    <a href="mailto:registrations@improvfest.nz">registrations@improvfest.nz</a> — we’re happy to talk!
   </p>
 <% end %>
 <p>
   If we manage to slot you into a workshop from a waitlist, we’ll notify you by email and/or text message.
-  The cost of the workshop will be added to your registration fee, and you’ll be able to pay this at any time.
+  The cost of the workshop will be added to your registration fee, and you can pay the difference by
+  visiting your registration page. Please pay this as soon as possible. For more information about
+  waitlists, please see our <a href="https://my.improvfest.nz/about/faq">FAQ</a>.
 </p>
 <p>
   If you have any questions, please reply to this message, or email us at
